[project]
name = "antrian-simpy"
version = "0.1.0"
description = "Tugas Pemodelan antrian"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "simpy>=4.1.1",
]
